Some tests for server/extra_comms.c.
Change-Id: I543ca19ef5ff6bb22f40523f8e59b7042fd90cbd

--- a/Makefile.am
+++ b/Makefile.am
@@ -335,6 +335,7 @@ runner_SOURCES = \
 	utest/server/test_backup_phase3.c \
 	utest/server/test_bu_get.c \
 	utest/server/test_delete.c \
+	utest/server/test_extra_comms.c \
 	utest/server/test_list.c \
 	utest/server/test_manio.c \
 	utest/server/test_resume.c \
