Clear up some confusion about the protocols.

--- a/website/content/main.template
+++ b/website/content/main.template
@@ -40,11 +40,12 @@ BURP - BackUp and Restore Program
 @why@WHY@why
 @features@FEATURES@features
 @changelog@CHANGELOG@changelog
+@protocol1@PROTOCOL 1@protocol1
+@protocol2@PROTOCOL 2@protocol2
 @news@NEWS@news
 @faq@FAQ@faq
 @docs@DOCS@docs
 @burpui@BURP-UI@burpui
-@burp2@BURP2@burp2
 @download@DOWNLOAD@download
 @licence@LICENCE@licence
 @contributors@CONTRIBUTORS@contributors
