Tests for src/client/extra_comms.c.
Change-Id: Id3423f98a41eb7075a43c082deb61734a7a659ca

--- a/Makefile.am
+++ b/Makefile.am
@@ -307,6 +307,7 @@ runner_SOURCES = \
 	utest/client/test_acl.c \
 	utest/client/test_auth.c \
 	utest/client/test_delete.c \
+	utest/client/test_extra_comms.c \
 	utest/client/test_extrameta.c \
 	utest/client/test_find.c \
 	utest/client/test_monitor.c \
