Replace readdir_r with readdir, to avoid deprecation warnings.
Change-Id: Id60e3fe020b66666b6070241dcb4b8556ebfee91

--- a/configure.ac
+++ b/configure.ac
@@ -98,7 +98,7 @@ dnl --------------------------------------------------------------------------
 dnl Check for required functions
 dnl --------------------------------------------------------------------------
 
-AC_CHECK_FUNCS_ONCE([lockf lutimes chflags readdir_r])
+AC_CHECK_FUNCS_ONCE([lockf lutimes chflags])
 
 AC_FUNC_ALLOCA
 
