Add 'request' page.

--- a/website/content/main.template
+++ b/website/content/main.template
@@ -39,6 +39,7 @@ BURP - BackUp and Restore Program
 @index@ABOUT@about
 @why@WHY@why
 @features@FEATURES@features
+@requests@REQUESTS@requests
 @changelog@CHANGELOG@changelog
 @protocol1@PROTOCOL 1@protocol1
 @protocol2@PROTOCOL 2@protocol2
