Stop server child hanging on verify/restore when gzipped file is corrupt. Also, if a file is missing on verify/restore, continue to verify/restore more files.
Change-Id: I66f32b5ab3a8b1be1a361659118106dfb6bd5750

--- a/Makefile.am
+++ b/Makefile.am
@@ -322,6 +322,7 @@ runner_SOURCES = \
 	utest/server/protocol1/test_blocklen.c \
 	utest/server/protocol1/test_dpth.c \
 	utest/server/protocol1/test_fdirs.c \
+	utest/server/protocol1/test_restore.c \
 	utest/server/protocol2/champ_chooser/test_champ_chooser.c \
 	utest/server/protocol2/champ_chooser/test_champ_server.c \
 	utest/server/protocol2/champ_chooser/test_dindex.c \
