Delete unused Windows build code and icons.
Change-Id: I5cad345844bf619a8f1a7663d73eb41f986aa188

--- a/src/win32/Makefile.installer.in
+++ b/src/win32/Makefile.installer.in
@@ -32,7 +32,7 @@ INSTALL_EXE := $(BUILDDIR)/release@BITS@/burp-win@BITS@-installer-$(VERSION).exe
 BURP_BINARIES := \
 	burp.dll \
 	burp.exe \
-	burp_ca.bat
+	burp_ca.bat \
 
 DEPKGS_BINARIES := \
 	$(SSL_DLL) \
