More cleanup of Windows Makefiles.
Change-Id: Ic45a6a6535e3bf4fdfcdd4019307a1f99ab8b0af

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -13,7 +13,6 @@ INCLUDES = \
 	$(INCLUDE_ZLIB) \
 	$(INCLUDE_VSS) \
 	$(INCLUDE_OPENSSL) \
-	$(INCLUDE_ICONS)
 
 DEFINES = \
 	-DUSING_DLL \
@@ -21,8 +20,8 @@ DEFINES = \
 	-DWINVER=0x500 \
 	$(HAVES)
 
-vpath %.c $(MAINDIR)/src $(BUILDDIR)/libwin32
-vpath %.cpp $(MAINDIR)/src $(BUILDDIR)/libwin32
+vpath %.c $(MAINDIR)/src
+vpath %.cpp $(MAINDIR)/src
 
 ##########################################################################
 
