Compile and run utests on Windows.
Change-Id: I633717b65195ba17f62b51276fefa019c5a6db5c

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 *.gcda
 .deps/
 .dirstamp
-/*.tar.bz2
 /aclocal.m4
 /autoconf/Make.common
 /autoconf/Make.common2
@@ -21,30 +20,26 @@
 /autom4te.cache
 /burp
 /burp_ca
-/burp.conf
-/burp-server.conf
 /burp-coverage/
 /burp-coverage.info
 /burp-coverage-clean.info
-/CA.cnf
+/burp-cross-tools
+/burp-depkgs
+/config.h.in
+/config.log
+/config.out
+/config.status
 /configure
+/libtool
+/Makefile
+/Makefile.in
 /runner
 /runner.log
 /runner.trs
+/src/config.h
+/src/config.h.in
 /src/server/protocol1/vss_strip
 /src/stamp-h1
 /summary_script
 /test-suite.log
-/utest_find/
-/utest_lockfile
-/utest_restore/
-/utest_xattr/
-vss_strip
-Makefile
-Makefile.in
-config.h.in
-config.log
-config.out
-config.status
-libtool
-src/config.h
+/vss_strip
