--- a/src/win32/Makefile.installer.in
+++ b/src/win32/Makefile.installer.in
@@ -1,7 +1,3 @@
-#
-# Makefile for win32 burp executables
-# Using MinGW cross-compiler on GNU/Linux
-#
 #  Written by Robert Nelson, June 2006
 #
 # Heavily modified by Graham Keeling.
@@ -33,6 +29,7 @@ BURP_BINARIES := \
 	burp.dll \
 	burp.exe \
 	burp_ca.bat \
+	utest.exe \
 
 DEPKGS_BINARIES := \
 	$(SSL_DLL) \
@@ -41,6 +38,7 @@ DEPKGS_BINARIES := \
 	libpcre-1.dll \
 	libpcreposix-0.dll \
 	libyajl.dll \
+	libcheck-0.dll \
 	openssl.exe
 
 MINGW_LIBS := \
