Fix burp_ca for SunOS

--- a/configs/certs/CA/burp_ca.in
+++ b/configs/certs/CA/burp_ca.in
@@ -45,7 +45,16 @@ while ! lock; do
 	fi
 done
 
-name=$(hostname -f 2>/dev/null)
+case "$(uname -s)" init
+	# Solaris derivates don't support 'hostname -f' and, in fact,
+	# set the hostname to '-f' with that call.
+	SunOS)
+		name=$( (check-hostname | cut -d' ' -f7) 2>/dev/null )
+	;;
+	*)
+		name=$(hostname -f 2>/dev/null)
+	;;
+esac
 # Try NetBSD style.
 [ -n "$name" ] || name=$(hostname 2>/dev/null)
 if [ -z "$name" ] ; then
