Update 6sync to Natcoweb.

--- a/website/content/main.template
+++ b/website/content/main.template
@@ -114,7 +114,7 @@ donation.
      <BR>
      By Graham Keeling
      <BR>
-     <a href="http://6sync.com">Hosted by 6sync</a>
+     <a href="https://www.natcoweb.com">Hosted by Natcoweb</a>
     </font>
    </td>
   </tr>
