Add the ability for the client to connect to different server ports according to whether it is doing backup/restore/verify/list/delete.
Change-Id: I83ec32cece19dbdcc7da8dee20a691669992ac26

--- a/configs/client/burp.conf.in
+++ b/configs/client/burp.conf.in
@@ -2,6 +2,8 @@
 
 mode = client
 port = 4971
+# A different port to use for restores - see the man page for more options.
+#port_restore = 5971
 status_port = 4972
 server = @server_address@
 password = abcdefgh
