JSON output/input supports multiple actions on the same client.
Change-Id: I2315984b1568d37b74b929d666041b81c4de2397

--- a/Makefile.am
+++ b/Makefile.am
@@ -355,6 +355,7 @@ runner_SOURCES = \
 	utest/test_attribs.c \
 	utest/test_base64.c \
 	utest/test_cmd.c \
+	utest/test_cntr.c \
 	utest/test_conf.c \
 	utest/test_conffile.c \
 	utest/test_fzp.c \
