modified:   src/burpconfig.h 	modified:   src/log.c 	modified:   src/server/protocol1/backup_phase2.c 	Make paths long-UTF-8-compatible
	modified:   src/server/protocol1/bedup.c
	fix error when bedup failed on empty directory (FreeBSD)
	modified:   src/win32/Makefile
	modified:   src/win32/compat/compat.cpp

--- a/src/win32/Makefile
+++ b/src/win32/Makefile
@@ -61,8 +61,8 @@ $(DIRS):
 			exit 1 ; \
 		fi ; \
 	done ; \
-	ln -vsfT $${TOOLSDIR}/burp-cross-tools ../../burp-cross-tools ; \
-	ln -vsfT $${TOOLSDIR}/burp-depkgs ../../burp-depkgs
+	ln -vsf $${TOOLSDIR}/burp-cross-tools ../../burp-cross-tools ; \
+	ln -vsf $${TOOLSDIR}/burp-depkgs ../../burp-depkgs
 
 Makefile.inc: ../../burp-cross-tools
 	@echo Creating $@
