Fix missing Windows log timestamps. Fix 'resumed' timestamps.
Change-Id: I3820b5aa9a8f674c613e966da1f3b05f12cf50f7

--- a/Makefile.am
+++ b/Makefile.am
@@ -364,6 +364,7 @@ runner_SOURCES = \
 	utest/test_lock.c \
 	utest/test_pathcmp.c \
 	utest/test_slist.c \
+	utest/test_times.c \
 	utest/test.h
 
 runner_SOURCES+= $(burp_SOURCES)
