Fix for server side autoupgrade path corruption.
Change-Id: I950c88b163d849144293f4084cbe942f535581ac

--- a/Makefile.am
+++ b/Makefile.am
@@ -340,6 +340,7 @@ runner_SOURCES = \
 	utest/server/protocol2/test_bsparse.c \
 	utest/server/protocol2/test_dpth.c \
 	utest/server/test_auth.c \
+	utest/server/test_autoupgrade.c \
 	utest/server/test_ca.c \
 	utest/server/test_backup_phase3.c \
 	utest/server/test_bu_get.c \
