Fall back to legacy ncurses detection if pkg-config cannot find it.
This works around Travis XCode builds apparently being unable to locate
ncurses.pc. Ideally the XCode build process should be tweaked to make
sure that file *can* be found, seeing as pkg-config in general does
work; unfortunately neither I nor the main author of burp know Macs well
enough to implement this.

Note that the way the legacy check is invoked now, ncurses won't be
searched for if pkg-config (or to be precise the relevant m4 macro) is
not present at all. Hopefully this won't become a problem until this
workaround is no longer needed.

--- a/configure.ac
+++ b/configure.ac
@@ -285,7 +285,19 @@ m4_ifdef([PKG_CHECK_MODULES],
        CFLAGS="$CFLAGS $ncurses_CFLAGS -DHAVE_NCURSES_H=1"
        AC_DEFINE([HAVE_NCURSES], [1], [Set to 1 if we have ncurses])
       ],
-      []
+      [
+       AC_CHECK_HEADERS([ncurses.h ncurses/ncurses.h],
+         [
+           AC_CHECK_LIB([ncurses], [curs_set],
+             [
+               NCURSES_LIBS="-lncurses"
+               have_ncurses=yes
+               AC_DEFINE([HAVE_NCURSES], [1], [Set to 1 if we have ncurses])
+             ]
+           )
+         ]
+       )
+      ]
     )
   ]
 )
