Follow through with the AC_INIT package definitions throughout the codebase (except for the Windows installer).
Change-Id: I418188f3f6d24ee36ad641a8750d202383d8201e

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@
 /libtool
 /Makefile
 /Makefile.in
+/manpages/bedup.8
+/manpages/bsigs.8
+/manpages/bsparse.8
+/manpages/burp.8
+/manpages/burp_ca.8
+/manpages/vss_strip.8
 /runner
 /runner.log
 /runner.trs
